--- a/projects/web/public/stylesheets/custom.css
+++ b/projects/web/public/stylesheets/custom.css
@@ -217,3 +217,11 @@ th {
 .table {
     margin-bottom: 0px;
 }
+
+.copy-icon {
+    max-width: 20px;    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
