Issues fixed on execution, storoge and web modules

--- a/projects/web/app/views/guest/InstanceController/list.html
+++ b/projects/web/app/views/guest/InstanceController/list.html
@@ -14,10 +14,8 @@
 <br>
 
 #{crud.table fields: 
-        ['executor.name', 'workflowNode.workflow.name', 'cloudInstanceName', 'cloudInstanceIp',
-            'plugin.name', 'price', 'creationDate', 'phase', 'status', 'copyInstance'], 
-        sort: ['executor.name', 'workflowNode.workflow.name', 'cloudInstanceName', 'cloudInstanceIp',
-            'plugin.name', 'price', 'creationDate', 'phase', 'status']}
+        ['executor.name', 'workflowNode.workflow.name', 'cloudInstanceName', 'cloudInstanceIp','plugin.name', 'price', 'creationDate', 'phase', 'status', 'copyInstance'], 
+        sort: ['executor.name', 'workflowNode.workflow.name', 'cloudInstanceName', 'cloudInstanceIp', 'plugin.name', 'price', 'creationDate', 'phase', 'status']}
 
     #{crud.custom 'executor.name'}
         <a href="@{show(object._key())}">${object.executor.name}</a>
